# OpenGLIntro

./: .gitignore  IntroToOpenGl.sln
IntroToOpenGl/: .gitignore  BillBoardShader.cpp  BillBoardShader.h  BillBoardShader.shader  CMakeLists.txt  Camera.h  CameraMain.cpp  CameraMain.h  CoordinateSystem2.shader  CoordinateSystems.cpp  CoordinateSystems.h  CoordinateSystems.shader  EngineEvents.cpp  EngineEvents.h  Event.h  FirstPersonCamera.cpp  FirstPersonCamera.h  FirstPersonCamera.shader  FirstShader.cpp  FirstShader.h  FirstTriangle.cpp  FirstTriangle.h  GLMLookAtCamera.cpp  GLMLookAtCamera.h  GLMLookAtCamera.shader  GameState.cpp  GameState.h  HelloTriangle.cpp  HelloTriangle.h  Intro.cpp  Intro.h  IntroTexture.cpp  IntroTexture.h  IntroTexture.shader  IntroToOpenGl.vcxproj  IntroToOpenGl.vcxproj.filters  IntroTransformation.cpp  IntroTransformation.h  IntroTransformation.shader  Matrix.h  (+110 more)
IntroToOpenGl/Imgui/: imstb_textedit.h
IntroToOpenGl/OpenGLLibrary/glad/include/glad/: glad.h
IntroToOpenGl/OpenGLLibrary/glad/src/: glad.c
IntroToOpenGl/glad/glad/: glad.h
IntroToOpenGl/x64/Debug/: IntroToOpenGl.exe.recipe  IntroToOpenGl.ilk  vc143.idb
IntroToOpenGl/x64/Debug/IntroToOpenGl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  IntroToOpenGl.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
